--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,19 @@ body {
   background-color: #f2f4f8;
   margin: 0;
   box-sizing: border-box;
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-align: center;
+  -ms-flex-pack: center;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+
+
 }
 
 a {
