--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,43 @@ h1 {
     color: rgb(198, 197, 202);
     border: 1px solid rgb(198, 197, 202);
 }
+
+.App {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+.footer {
+    position: relative;
+    bottom: 0px;
+    width: 100%;
+    height: 50px;
+    background-color: black;
+    text-align: center;
+    color: white;
+
+}
+.App-header {
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+}
+.buttons-options {
+
+
+
+
+}
+.button {
+    display: grid;
+    max-width: fit-content;
+
+}
+/*.navbar-right {*/
+/*    align-self: self-start;*/
+/*}*/
